still tweaking text

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Matthew Deiters
 ---
 
 <div class='home_box' id='home_left'>
-  <h2>Open Source</h2>
+  <h2>My Open Source Projects</h2>
   <div id='github-projects'></div>
 </div>
 
