--- a/404.html
+++ b/404.html
@@ -4,11 +4,8 @@
 <html>
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-    <title>Matthew Deiters - {{ page.title }}</title>
+    <title>Matthew Deiters</title>
     <link rel="stylesheet" href="/stylesheets/master.css" type="text/css" media="screen" charset="utf-8"/>
-    <link rel="stylesheet" href="/stylesheets/syntax.css" type="text/css" media="screen" charset="utf-8"/>
-    <script src="/javascripts/jquery.js" type="text/javascript" charset="utf-8"></script>
-    <link rel='alternate' type='application/rss+xml' href='http://blog.theagiledeveloper.com/rss.xml' />
   </head>
   <body>
     <div id='wrapper'>
@@ -25,7 +22,7 @@
         </div>
       </div>
       <div id='content'>
-        <h3>You have requested a page that does not exist.</h3>
+        
         <div class='clearfix'></div>
       </div>
     </div>
@@ -33,4 +30,3 @@
       Copyright &copy; 2010 Matthew Deiters. Some rights reserved.
     </div>
   </body>
-</html>
