--- a/404.html
+++ b/404.html
@@ -22,7 +22,7 @@
         </div>
       </div>
       <div id='content'>
-        
+        <h3>You have requested a page that does not exist.</h3>
         <div class='clearfix'></div>
       </div>
     </div>
